# ytldl2

./: .gitignore  MANIFEST.in  README.md  cli.py  pyproject.toml
experiments/: yt_jsons.ipynb
manual/: terminal_music_library_user.py
manual_tests/: terminal_music_library_user.py  terminal_ui.py
src/ytldl2/: __init__.py  api.py  cache.py  download_queue.py  downloader.py  extractor.py  killer.py  memory_cache.py  models.py  music_download_tracker.py  music_downloader.py  music_library.py  music_library_user.py  oauth.py  postprocessors.py  sqlite_cache.py  sqlite_cache_migrations.py
src/ytldl2/models/: channel.py  download_hooks.py  download_result.py  home_items.py  info.py  playlist.py  raw_artist.py  raw_home.py  raw_playlist.py  raw_watch_playlist.py  song.py  types.py  video.py
src/ytldl2/protocols/: cache.py  music_download_tracker.py  music_library_user.py  ui.py
src/ytldl2/protocols/ui/: music_download_tracker.py  music_library_user.py  progress_bar.py  user.py
src/ytldl2/terminal/: music_library_user.py  ui.py
src/ytldl2/util/: console.py
src/ytldl2_cli/: args.py  cli.py
tests/: __init__.py  conftest.py  test_sqlite_cache.py
tests/ytldl2/: __init__.py  __main__.py  fixtures.py  marks.py  test_api.py  test_cache.py  test_cancellation_tokens.py  test_download_queue.py  test_downloader.py  test_extractor.py  test_killer.py  test_memory_cache.py  test_metadata.py  test_models.py  test_music_downloader.py  test_music_library.py  test_music_library_config.py  test_oauth.py  test_postprocessors.py  test_sqlite_cache.py
tests/ytldl2/data/: artist.json  cache.db  get_home.json  get_playlist.json  get_watch_playlist.json  home.json  song.json  test_audio_no_tags.m4a  video.json
tests/ytldl2/models/: test_home_items.py  test_models.py
ytldl2/: api.py  cancellation_tokens.py  crypto.py  metadata.py  music_downloader.py  music_library.py  music_library_config.py  oauth.py  postprocessors.py  proxies.py  sqlite_cache.py  youtube_dl_builder.py
ytldl2/models/: download_hooks.py  home_items.py  info.py  playlist.py  song.py
ytldl2/protocols/: ui.py
ytldl2/util/: fs.py  time.py
