[project]
name = "ytldl2"
authors = [{ name = "Niakr1s", email = "pavel2188@gmail.com" }]
description = "YouTube music local library"
readme = "README.md"
version = "0.3.1"
requires-python = ">=3.11"
keywords = ["youtube", "music", "youtube music"]
license = { file = "LICENSE" }
classifiers = ["Programming Language :: Python :: 3"]
dependencies = [
    'mutagen>=1.46.0',
    'Pillow>=9.5.0',
    'requests>=2.31.0',
    'yt-dlp>=2023.3.4',
    'ytmusicapi>=1.0.2',
    'robocrypt>=4.2.6',
    'pydantic>=2.2.0',
    'rich>=13.4.2',
]

[project.urls]
Github = "https://github.com/niakr1s/ytldl2"

[project.optional-dependencies]
dev = [
    "pytest",
]

[project.scripts]
ytldl2 = "ytldl2_cli.cli:main"
